--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.6",
     "antd": "^5.24.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "bcryptjs": "^3.0.2",
+    "graphql": "^16.10.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.55.0",
     "react-router": "^7.4.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/node": "^22.13.14",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
