--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,7 +30,8 @@
       "@pages/*": ["src/pages/*"],
       "@utils/*": ["src/utils/*"],
       "@lib/*": ["src/lib/*"],
-      "@store/*": ["src/store/*"]
+      "@store/*": ["src/store/*"],
+      "@public/*": ["public/*"]
     }
   },
   "include": ["src"]
