--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^7.4.1",
+    "victory": "^37.3.6",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
