--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc -b && vite build",
+    "test": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.55.0",
     "react-router": "^7.4.1",
     "victory": "^37.3.6",
+    "vitest": "^3.1.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "3.1.4",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
